Fixed the shrinking added media query

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="header-bot">
             <div class="header-bot-left">
-                <p style="font-size: 48px ; font-weight: bold;margin: 0;">This website is awesome</p>
-                <p style="font-size: 18px;">this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <p style="font-size: 3vw; font-weight: bold; padding: 0%; margin: 0;">This website is awesome</p>
+                <p style="font-size: 1vw;">This website was made by Spanker after learning the basics of HTML & CSS MADAFQQQAAAA ;D</p>
                 <button>Sign up</button>
             </div>
             <div class="header-bot-right">Placeholder</div>
@@ -43,29 +43,19 @@
        </div>
     </div>
 
-
-
-
-
-    <div class="container-two">
+  <div class="container-two">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. who knows? All I know is that it looks nice.</p>
         <footer>-Thor, God of Thunder</footer>
 
     </div>
 
-    
-
-
-
-
-    <div class="container-three">
+      <div class="container-three">
         <div>
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over here!</p>
         </div>
         <button>Sign up</button>
     </div>
-
 
     <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
