--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-bot">
             <div class="header-bot-left">
                 <p style="font-size: 3vw; font-weight: bold; padding: 0%; margin: 0;">This website is awesome</p>
-                <p style="font-size: 1vw;">This website was made by Spanker after learning the basics of HTML & CSS MADAFQQQAAAA ;D</p>
+                <p style="font-size: 1vw;">This website was made by Spanker after learning the basics of HTML & CSS</p>
                 <button>Sign up</button>
             </div>
             <div class="header-bot-right">Placeholder</div>
